--- a/sass/style.sass
+++ b/sass/style.sass
@@ -23,7 +23,6 @@
 
 body
 	margin: 0
-	font-family: 'Work Sans', sans-serif
 
 .container
 	max-width: 1200px
@@ -43,13 +42,13 @@ a:link
 	background-position: center
 	color: #fff
 	position: relative
+	font-family: 'GothamRounded-Bold'
 
 	nav
 		max-width: 1000px
 		margin: 0 auto
 		padding-top: 30px
 		height: 85px
-		font-family: 'GothamRounded-Bold'
 
 		div	
 			float: left
@@ -74,6 +73,8 @@ a:link
 	p
 		font-size: 16px
 		margin: 13px 0 26px 0
+		font-family: 'GothamRounded-Medium'
+
 
 .started-btn
 	background: #16a085
