--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,7 @@ a:link {
       float: left;
       width: 20%;
       height: 55px;
-      display: flex;
-      margin: 0; }
+      display: flex; }
       .hero nav div a {
         color: #fff;
         font-size: 16px;
@@ -61,7 +60,7 @@ a:link {
         margin: auto;
         letter-spacing: 2.4px; }
   .hero h1 {
-    margin-top: 200px;
+    margin: 200px 0 0 0;
     font-size: 36px;
     text-transform: uppercase;
     letter-spacing: 5.4px; }
@@ -115,7 +114,8 @@ a:link {
     letter-spacing: 1.8px;
     width: 428px;
     margin-bottom: 47px;
-    max-width: 100%; }
+    max-width: 100%;
+    line-height: 180%; }
   .about-us img {
     position: absolute;
     right: 0;
@@ -125,5 +125,36 @@ a:link {
 .started-btn-2 {
   width: 192px;
   height: 51px; }
+
+/* MEDIA QUERIES */
+@media (max-width: 991px) {
+  .about-us .col:first-of-type {
+    padding: 80px 0 0 0; }
+  .about-us .col:last-of-type {
+    height: 300px; }
+  .about-us img {
+    max-width: 100%; } }
+
+@media (max-width: 767px) {
+  .hero {
+    height: auto; }
+    .hero nav {
+      height: 350px;
+      padding-top: 0; }
+      .hero nav div {
+        width: 100%;
+        height: 70px; }
+        .hero nav div a {
+          width: 100%;
+          height: 70px;
+          line-height: 70px;
+          font-size: 20px; }
+    .hero h1 {
+      margin: 80px 0 0 0;
+      font-size: 32px; }
+  .started-btn-1, .started-btn-2 {
+    margin-bottom: 110px; }
+  .about-us .col:last-of-type {
+    height: 180px; } }
 
 /*# sourceMappingURL=style.css.map */
