--- a/sass/style.sass
+++ b/sass/style.sass
@@ -55,7 +55,6 @@ a:link
 			width: 20%
 			height: 55px
 			display: flex
-			margin: 0
 
 			a
 				color: #fff
@@ -66,7 +65,7 @@ a:link
 				letter-spacing: 2.4px
 
 	h1
-		margin-top: 200px
+		margin: 200px 0 0 0
 		font-size: 36px
 		text-transform: uppercase
 		letter-spacing: 5.4px
@@ -129,8 +128,9 @@ a:link
 		width: 428px
 		margin-bottom: 47px
 		max-width: 100%
+		line-height: 180%
 
-	img
+	img 
 		position: absolute
 		right: 0
 		bottom: 0
@@ -140,3 +140,46 @@ a:link
 	@extend .started-btn-1
 	width: 192px
 	height: 51px
+
+
+/* MEDIA QUERIES */
+@media (max-width: 991px)
+	.about-us
+		.col:first-of-type
+			padding: 80px 0 0 0
+
+		.col:last-of-type
+			height: 300px
+		img
+			max-width: 100%
+			
+
+
+@media (max-width: 767px)
+	.hero
+		height: auto
+
+		nav
+			height: 350px
+			padding-top: 0
+
+			div
+				width: 100%
+				height: 70px
+
+				a
+					width: 100%
+					height: 70px
+					line-height: 70px
+					font-size: 20px
+
+		h1
+			margin: 80px 0 0 0
+			font-size: 32px
+
+	.started-btn-1
+		margin-bottom: 110px
+
+	.about-us
+		.col:last-of-type
+			height: 180px
