--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,29 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Work+Sans:300,500,700&subset=latin-ext')
-
-@font-face
-	font-family: 'GothamRounded-Bold'
-	src: url('GothamRounded-Bold.eot') format('embedded-opentype')
-	font-weight: normal
-	font-style: normal
-
-@font-face 
-  	font-family: 'GothamRounded-Medium'
-  	src: url('GothamRounded-Medium.eot') format('embedded-opentype')
-  	font-weight: normal
-  	font-style: normal
-
-@font-face
-	font-family: 'GothamRounded-Book'
-	src: url('GothamRounded-Book.eot') format('embedded-opentype')
-	font-weight: normal
-	font-style: normal
-
 *
 	box-sizing: border-box
 
 body
 	margin: 0
-	font-family: 'GothamRounded-Bold'
+	font-family: Gotham Rounded Medium
 
 .container
 	max-width: 1200px
@@ -31,6 +11,9 @@ body
 
 .row
 	margin: 0
+
+.col
+	padding: 0
 	
 a:link
 	text-decoration: none
@@ -73,7 +56,7 @@ a:link
 	p
 		font-size: 16px
 		margin: 13px 0 26px 0
-		font-family: 'GothamRounded-Medium'
+		font-family: Gotham Rounded Medium
 		letter-spacing: 2.4px
 
 
@@ -111,7 +94,7 @@ a:link
 	.col:last-of-type
 		padding: 0
 		position: relative
-		height: 479px
+		height: 531px
 		z-index: 10
 
 	h2
@@ -128,7 +111,7 @@ a:link
 		width: 428px
 		margin-bottom: 47px
 		max-width: 100%
-		line-height: 180%
+		line-height: 24px
 
 	img 
 		position: absolute
@@ -142,6 +125,39 @@ a:link
 	height: 51px
 
 
+/* OFFER */
+.offer
+	margin-top: 145px
+
+	h2
+		text-transform: uppercase
+		letter-spacing: 2.7px
+		font-size: 18px
+		margin: 0
+
+	p
+		font-size: 12px
+		letter-spacing: 1.8px
+		line-height: 22px
+		margin: 44px 0 41px 0
+
+	h4
+		font-size: 12px
+		margin: 43px 0 5px 0
+
+	.fa
+		font-size: 35px
+
+	.fa-angle-left
+		margin-right: 10px
+
+.learn-more-btn
+	@extend .started-btn-1
+	width: 194px
+	height: 54px
+
+
+
 /* MEDIA QUERIES */
 @media (max-width: 991px)
 	.about-us
@@ -149,10 +165,25 @@ a:link
 			padding: 80px 0 0 0
 
 		.col:last-of-type
-			height: 300px
+			height: 270px
+
 		img
 			max-width: 100%
-			
+
+	.offer
+		margin-top: 100px
+		margin-bottom: 80px
+
+		h2
+			margin-top: 60px
+
+		p
+			margin: 25px 0 35px 0
+
+		img
+			display: block
+			margin: 0 auto
+			max-width: 80%
 
 
 @media (max-width: 767px)
@@ -180,6 +211,12 @@ a:link
 	.started-btn-1
 		margin-bottom: 110px
 
+	.started-btn-2
+		margin-bottom: 0
+
+	.learn-more-btn
+		margin-bottom: 0
+
 	.about-us
 		.col:last-of-type
-			height: 180px
+			height: 230px
