--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&subset=latin-ext");
+/* global styles */
 * {
   box-sizing: border-box; }
 
 body {
   margin: 0;
-  font-family: Gotham Rounded Medium; }
+  font-family: 'Montserrat', sans-serif; }
 
 .container {
   max-width: 1200px;
@@ -18,6 +20,10 @@ body {
 a:link {
   text-decoration: none; }
 
+img {
+  object-fit: cover; }
+
+/* mixins */
 /* HERO */
 .hero {
   height: 745px;
@@ -39,6 +45,7 @@ a:link {
       .hero nav div a {
         color: #fff;
         font-size: 16px;
+        font-weight: 700;
         text-transform: uppercase;
         display: block;
         margin: auto;
@@ -46,10 +53,12 @@ a:link {
   .hero h1 {
     margin: 200px 0 0 0;
     font-size: 36px;
+    font-weight: 700;
     text-transform: uppercase;
     letter-spacing: 5.4px; }
   .hero p {
     font-size: 16px;
+    font-weight: 500;
     margin: 13px 0 26px 0;
     font-family: Gotham Rounded Medium;
     letter-spacing: 2.4px; }
@@ -57,11 +66,15 @@ a:link {
 .started-btn-1, .started-btn-2, .learn-more-btn {
   background: #16a085;
   font-size: 12px;
+  font-weight: 700;
   text-transform: uppercase;
   border: none;
   width: 166px;
   height: 49px;
   border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
   color: #fff;
   letter-spacing: 1.8px; }
 
@@ -88,23 +101,24 @@ a:link {
     z-index: 10; }
   .about-us h2 {
     font-size: 18px;
+    font-weight: 700;
     text-transform: uppercase;
     margin-bottom: 50px;
     letter-spacing: 2.7px;
     width: 376px;
-    max-width: 100%; }
+    max-width: 90%; }
   .about-us p {
     font-size: 12px;
+    font-weight: 400;
     letter-spacing: 1.8px;
     width: 428px;
     margin-bottom: 47px;
-    max-width: 100%;
+    max-width: 90%;
     line-height: 24px; }
   .about-us img {
     position: absolute;
     right: 0;
-    bottom: 0;
-    object-fit: cover; }
+    bottom: 0; }
 
 .started-btn-2 {
   width: 192px;
@@ -117,25 +131,73 @@ a:link {
     text-transform: uppercase;
     letter-spacing: 2.7px;
     font-size: 18px;
+    font-weight: 700;
     margin: 0; }
   .offer p {
     font-size: 12px;
+    font-weight: 400;
     letter-spacing: 1.8px;
     line-height: 22px;
     margin: 44px 0 41px 0; }
   .offer h4 {
     font-size: 12px;
+    font-weight: 700;
     margin: 43px 0 5px 0; }
   .offer .fa {
     font-size: 35px; }
-  .offer .fa-angle-left {
-    margin-right: 10px; }
+
+.fa-angle-left {
+  margin-right: 10px; }
 
 .learn-more-btn {
   width: 194px;
   height: 54px; }
 
+/* GALLERY */
+.gallery {
+  padding: 122px 0 120px 0;
+  background: #f5f6f7; }
+  .gallery .fa {
+    font-size: 35px; }
+  .gallery .item img {
+    max-width: 370px;
+    max-height: 244px; }
+
+.carousel-wrapper {
+  position: relative; }
+
+.image-right {
+  float: right; }
+
+.gallery-text-wrapper {
+  width: 150px;
+  text-align: center;
+  margin-top: 37.5px; }
+  .gallery-text-wrapper h4 {
+    font-size: 16px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin: 31px 0 24px 0; }
+  .gallery-text-wrapper p {
+    font-size: 10px;
+    font-weight: 500;
+    margin: 0;
+    padding: 0 10px; }
+
+.arrows-wrapper {
+  height: 35px;
+  width: auto;
+  position: absolute;
+  top: -40px;
+  right: 0; }
+
 /* MEDIA QUERIES */
+@media (max-width: 1199px) {
+  .gallery .item img {
+    max-width: 97%; }
+  .gallery-text-wrapper {
+    margin-top: 0; } }
+
 @media (max-width: 991px) {
   .about-us .col:first-of-type {
     padding: 80px 0 0 0; }
@@ -150,14 +212,19 @@ a:link {
       margin-top: 60px; }
     .offer p {
       margin: 25px 0 35px 0; }
+    .offer .col:first-of-type {
+      text-align: center; }
     .offer img {
-      display: block;
-      margin: 0 auto;
-      max-width: 80%; } }
+      max-width: 80%; }
+  .gallery-text-wrapper {
+    margin-bottom: 60px; } }
 
 @media (max-width: 767px) {
   .hero {
     height: auto; }
+    .hero h1 {
+      margin: 80px 0 0 0;
+      font-size: 32px; }
     .hero nav {
       height: 350px;
       padding-top: 0; }
@@ -169,9 +236,6 @@ a:link {
           height: 70px;
           line-height: 70px;
           font-size: 20px; }
-    .hero h1 {
-      margin: 80px 0 0 0;
-      font-size: 32px; }
   .started-btn-1, .started-btn-2, .learn-more-btn {
     margin-bottom: 110px; }
   .started-btn-2 {
@@ -179,6 +243,28 @@ a:link {
   .learn-more-btn {
     margin-bottom: 0; }
   .about-us .col:last-of-type {
-    height: 230px; } }
+    height: 230px; }
+  .offer .fa {
+    font-size: 50px; }
+  .gallery {
+    padding: 80px 0 80px 0; }
+    .gallery .fa {
+      font-size: 50px; }
+    .gallery .carousel {
+      max-width: 370px;
+      margin: 0 auto; }
+    .gallery .item .col {
+      padding: 12px 0;
+      text-align: center;
+      width: auto;
+      margin: 0 auto; }
+  .image-right {
+    float: none; }
+  .gallery-text-wrapper {
+    margin: 0 auto 60px auto; }
+  .arrows-wrapper {
+    right: 10px; }
+  .fa-angle-left {
+    margin-right: 20px; } }
 
 /*# sourceMappingURL=style.css.map */
