--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,22 +1,34 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&subset=latin-ext')
+
+/* global styles */
 *
 	box-sizing: border-box
-
 body
 	margin: 0
-	font-family: Gotham Rounded Medium
-
+	font-family: 'Montserrat', sans-serif
 .container
 	max-width: 1200px
 	margin: 0 auto
-
 .row
 	margin: 0
-
 .col
-	padding: 0
-	
+	padding: 0	
 a:link
 	text-decoration: none
+img
+	object-fit: cover
+
+/* mixins */
+=border-radius($radius)
+	border-radius:         $radius
+	-webkit-border-radius: $radius
+	-moz-border-radius:    $radius
+	-ms-border-radius:     $radius
+
+=font($size, $weight)
+ 	font-size: $size
+ 	font-weight: $weight
+
 
 /* HERO */
 .hero
@@ -41,7 +53,7 @@ a:link
 
 			a
 				color: #fff
-				font-size: 16px
+				+font(16px, 700)
 				text-transform: uppercase
 				display: block
 				margin: auto
@@ -49,12 +61,12 @@ a:link
 
 	h1
 		margin: 200px 0 0 0
-		font-size: 36px
+		+font(36px, 700)
 		text-transform: uppercase
 		letter-spacing: 5.4px
 
 	p
-		font-size: 16px
+		+font(16px, 500)
 		margin: 13px 0 26px 0
 		font-family: Gotham Rounded Medium
 		letter-spacing: 2.4px
@@ -62,12 +74,12 @@ a:link
 
 .started-btn-1
 	background: #16a085
-	font-size: 12px
+	+font(12px, 700)
 	text-transform: uppercase
 	border: none
 	width: 166px
 	height: 49px
-	border-radius: 3px
+	+border-radius(3px)
 	color: #fff
 	letter-spacing: 1.8px
 
@@ -98,26 +110,25 @@ a:link
 		z-index: 10
 
 	h2
-		font-size: 18px
+		+font(18px, 700)
 		text-transform: uppercase
 		margin-bottom: 50px
 		letter-spacing: 2.7px
 		width: 376px
-		max-width: 100%
+		max-width: 90%
 
 	p
-		font-size: 12px
+		+font(12px, 400)
 		letter-spacing: 1.8px
 		width: 428px
 		margin-bottom: 47px
-		max-width: 100%
+		max-width: 90%
 		line-height: 24px
 
 	img 
 		position: absolute
 		right: 0
 		bottom: 0
-		object-fit: cover
 
 .started-btn-2
 	@extend .started-btn-1
@@ -132,23 +143,23 @@ a:link
 	h2
 		text-transform: uppercase
 		letter-spacing: 2.7px
-		font-size: 18px
+		+font(18px, 700)
 		margin: 0
 
 	p
-		font-size: 12px
+		+font(12px, 400)
 		letter-spacing: 1.8px
 		line-height: 22px
 		margin: 44px 0 41px 0
 
 	h4
-		font-size: 12px
+		+font(12px, 700)
 		margin: 43px 0 5px 0
 
 	.fa
 		font-size: 35px
 
-	.fa-angle-left
+.fa-angle-left
 		margin-right: 10px
 
 .learn-more-btn
@@ -157,8 +168,64 @@ a:link
 	height: 54px
 
 
+/* GALLERY */
+.gallery
+	padding: 122px 0 120px 0
+	background: #f5f6f7
+
+	.fa
+		font-size: 35px
+
+	.item
+		img
+			max-width: 370px
+			max-height: 244px
+
+.carousel-wrapper
+	
+	position: relative
+
+	.carousel
+		
+		
+.image-right
+	float: right
+
+.gallery-text-wrapper
+	width: 150px
+	text-align: center
+	margin-top: 37.5px
+
+	h4
+		+font(16px, 700)
+		text-transform: uppercase
+		margin: 31px 0 24px 0
+
+	p
+		+font(10px, 500)
+		margin: 0
+		padding: 0 10px
+
+.arrows-wrapper
+	height: 35px
+	width: auto
+	position: absolute
+	top: -40px
+	right: 0
+
+
 
 /* MEDIA QUERIES */
+@media (max-width: 1199px)
+	.gallery
+		.item
+			img
+				max-width: 97%
+
+	.gallery-text-wrapper
+		margin-top: 0
+
+
 @media (max-width: 991px)
 	.about-us
 		.col:first-of-type
@@ -180,15 +247,23 @@ a:link
 		p
 			margin: 25px 0 35px 0
 
+		.col:first-of-type
+			text-align: center
+
 		img
-			display: block
-			margin: 0 auto
 			max-width: 80%
+
+	.gallery-text-wrapper
+		margin-bottom: 60px
 
 
 @media (max-width: 767px)
 	.hero
 		height: auto
+
+		h1
+			margin: 80px 0 0 0
+			font-size: 32px
 
 		nav
 			height: 350px
@@ -204,10 +279,6 @@ a:link
 					line-height: 70px
 					font-size: 20px
 
-		h1
-			margin: 80px 0 0 0
-			font-size: 32px
-
 	.started-btn-1
 		margin-bottom: 110px
 
@@ -220,3 +291,37 @@ a:link
 	.about-us
 		.col:last-of-type
 			height: 230px
+
+	.offer
+		.fa
+			font-size: 50px
+
+	.gallery
+		padding: 80px 0 80px 0
+
+		.fa
+			font-size: 50px
+
+		.carousel
+			max-width: 370px
+			margin: 0 auto
+
+		.item
+			.col
+				padding: 12px 0
+				text-align: center
+				width: auto
+				margin: 0 auto
+
+	.image-right
+		float: none
+
+	.gallery-text-wrapper
+		margin: 0 auto 60px auto
+
+	.arrows-wrapper
+		right: 10px
+
+	.fa-angle-left
+		margin-right: 20px
+
