--- a/sass/style.sass
+++ b/sass/style.sass
@@ -15,8 +15,6 @@ body
 	padding: 0	
 a:link
 	text-decoration: none
-img
-	object-fit: cover
 
 /* mixins */
 =border-radius($radius)
@@ -180,14 +178,11 @@ img
 		img
 			max-width: 370px
 			max-height: 244px
+			object-fit: cover
 
 .carousel-wrapper
-	
 	position: relative
-
-	.carousel
-		
-		
+	
 .image-right
 	float: right
 
@@ -212,6 +207,56 @@ img
 	position: absolute
 	top: -40px
 	right: 0
+
+
+/* SUBSCRIBE */
+.subscribe
+	height: 790px
+	display: flex
+	background-image: url(https://i.imgur.com/PvEXamd.png)
+	background-size: cover
+	background-position: center
+
+	div
+		margin: auto
+		max-width: 100%
+
+		h2
+			+font(24px, 700)
+			letter-spacing: 3.6px
+			color: #fff
+			text-transform: uppercase
+			margin: 0 0 33px 0
+			text-align: center
+
+		form
+			margin: 0 auto
+			width: 349px
+
+			input
+				width: 283px
+				height: 63px
+				float: left
+				border: none
+				+font(16px, 500)
+				letter-spacing: 2.4px
+				color: #373737
+				padding: 0 24px
+				border-top-left-radius: 3px
+				border-bottom-left-radius: 3px
+
+			button
+				width: 66px
+				height: 63px
+				float: left
+				border: none
+				border-top-right-radius: 3px
+				border-bottom-right-radius: 3px
+				background: #16a085
+
+				.fa
+					color: #fff
+					font-size: 23px
 
 
 
