--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,6 +6,7 @@
 body
 	margin: 0
 	font-family: 'Montserrat', sans-serif
+	color: #373737
 .container
 	max-width: 1200px
 	margin: 0 auto
@@ -56,6 +57,9 @@ a:link
 				display: block
 				margin: auto
 				letter-spacing: 2.4px
+				transition: .2s
+				&:hover
+					transform: scale(1.1)
 
 	h1
 		margin: 200px 0 0 0
@@ -80,16 +84,22 @@ a:link
 	+border-radius(3px)
 	color: #fff
 	letter-spacing: 1.8px
+	transition: .3s
+	&:hover
+		background: #1abc9c
 
 .hero-icons
 	position: absolute
 	bottom: 25px
 	width: 100%
-	letter-spacing: 3px
+	letter-spacing: 4px
 
 	.fa
 		font-size: 21px
 		color: #fff
+		transition: .2s
+		&:hover
+			transform: scale(1.2)
 
 
 /* ABOUT-US */
@@ -232,10 +242,11 @@ a:link
 		form
 			margin: 0 auto
 			width: 349px
+			height: 63px
 
 			input
-				width: 283px
-				height: 63px
+				width: 81%
+				height: 100%
 				float: left
 				border: none
 				+font(16px, 500)
@@ -246,18 +257,117 @@ a:link
 				border-bottom-left-radius: 3px
 
 			button
-				width: 66px
-				height: 63px
+				width: 19%
+				height: 100%
 				float: left
 				border: none
 				border-top-right-radius: 3px
 				border-bottom-right-radius: 3px
 				background: #16a085
+				transition: .3s
+				&:hover
+					background: #1abc9c
 
 				.fa
 					color: #fff
 					font-size: 23px
 
+
+/* DOWNLOAD */
+.download
+	background: #f5f6f7
+	padding: 93px 0 116px 0
+
+	.download-container
+		max-width: 1000px
+		margin: 0 auto
+
+	h2
+		+font(20px, 700)
+		text-transform: uppercase
+		letter-spacing: 3px
+		margin: 0 0 16px 0
+		text-align: center
+
+	p
+		+font(12px, 500)
+		text-transform: uppercase
+		letter-spacing: 1.8px
+		line-height: 22px
+		text-align: center
+		margin: 0 0 46px 0
+		padding: 0 15px
+
+	button
+		border: none
+
+	.row
+		max-width: 648px
+		margin: 0 auto
+
+.download-btn-wrapper
+	width: 300px
+	height: 59px
+	margin: 0 auto
+	color: #fff
+	&:hover
+		.download-left-btn
+			background: #16a085
+
+		.download-right-btn
+			background: #1abc9c
+
+.download-left-btn
+	width: 81%
+	height: 100%
+	float: left
+	+font(16px, 700)
+	text-transform: uppercase
+	letter-spacing: 2.4px
+	background: #1abc9c
+	border-top-left-radius: 3px
+	border-bottom-left-radius: 3px
+	text-align: left
+	padding-left: 33px
+	transition: .3s
+
+.download-right-btn
+	width: 19%
+	height: 100%
+	float: left
+	font-size: 30px
+	background: #16a085
+	border-top-right-radius: 3px
+	border-bottom-right-radius: 3px
+	transition: .3s
+
+
+/* FOOTER */
+footer
+	padding: 43px 0 35px 0
+
+	img
+		float: right
+
+	p
+		+font(14px, 700)
+		letter-spacing: 2.1px
+		margin: 23px 0 0 0
+
+	span
+		color: #16a085
+		padding: 0 2px
+
+	a
+		margin: 0 0 23px 0
+		text-transform: uppercase
+		+font(14px, 700)
+		letter-spacing: 2.1px
+		color: #373737
+		transition: .1s
+		&:hover
+			text-decoration: underline
+			color: #373737
 
 
 /* MEDIA QUERIES */
@@ -370,3 +480,58 @@ a:link
 	.fa-angle-left
 		margin-right: 20px
 
+	.download-btn-wrapper
+		margin: 10px auto
+		width: 235px
+		height: 50px
+
+	.subscribe
+		height: 550px
+
+		div
+			form
+				width: 235px
+				height: 40px
+
+				input
+					padding: 0 10px
+
+	footer
+		img
+			margin-top: 30px
+
+	.hero
+		nav
+			div
+				a
+					&:hover
+						transform: scale(1.0)
+
+	.hero-icons
+		.fa
+			&:hover
+				transform: scale(1.0)
+
+	.started-btn-1
+		&:hover
+			background: #16a085
+
+	.subscribe
+		div
+			form
+				button
+					&:hover
+						background: #16a085
+
+	.download-btn-wrapper
+		&:hover
+			.download-left-btn
+				background: #1abc9c
+
+			.download-right-btn
+				background: #16a085
+
+	footer
+		a
+			&:hover
+				text-decoration: none
