--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&subset=latin-ext");
+@import url("https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700&subset=latin-ext");
 /* global styles */
 * {
   box-sizing: border-box; }
 
 body {
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Quicksand', sans-serif;
   color: #373737; }
 
 .container {
