--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700&subset=latin-ext')
+@import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700&subset=latin-ext')
 
 /* global styles */
 *
@@ -72,8 +72,6 @@ a:link
 		margin: 13px 0 26px 0
 		font-family: Gotham Rounded Medium
 		letter-spacing: 2.4px
-
-
 .started-btn-1
 	background: #16a085
 	+font(12px, 700)
@@ -126,7 +124,7 @@ a:link
 		max-width: 90%
 
 	p
-		+font(12px, 400)
+		+font(13px, 400)
 		letter-spacing: 1.8px
 		width: 428px
 		margin-bottom: 47px
@@ -155,7 +153,7 @@ a:link
 		margin: 0
 
 	p
-		+font(12px, 400)
+		+font(13px, 400)
 		letter-spacing: 1.8px
 		line-height: 22px
 		margin: 44px 0 41px 0
@@ -199,7 +197,7 @@ a:link
 .gallery-text-wrapper
 	width: 150px
 	text-align: center
-	margin-top: 37.5px
+	margin-top: 28.5px
 
 	h4
 		+font(16px, 700)
@@ -207,9 +205,10 @@ a:link
 		margin: 31px 0 24px 0
 
 	p
-		+font(10px, 500)
+		+font(11px, 500)
 		margin: 0
 		padding: 0 10px
+		letter-spacing: 1.5px
 
 .arrows-wrapper
 	height: 35px
@@ -364,7 +363,7 @@ footer
 		+font(14px, 700)
 		letter-spacing: 2.1px
 		color: #373737
-		transition: .1s
+		transition: .2s
 		&:hover
 			text-decoration: underline
 			color: #373737
@@ -495,6 +494,8 @@ footer
 
 				input
 					padding: 0 10px
+					+font(12px, 500)
+					letter-spacing: 0.8px
 
 	footer
 		img
